--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,10 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "animejs": "^3.1.0",
     "classnames": "2.2.6",
     "headroom.js": "0.9.4",
     "moment": "2.24.0",
@@ -59,7 +63,8 @@
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
     "react-scripts": "3.0.0",
-    "reactstrap": "8.0.0"
+    "reactstrap": "8.0.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@types/googlemaps": "3.30.19",
